PROJECT(HELLO-CPP)
ADD_SUBDIRECTORY(src/endian)
ADD_SUBDIRECTORY(src/虚函数与纯虚函数)
ADD_SUBDIRECTORY(src/unordered_set)
ADD_SUBDIRECTORY(src/类的拷贝函数与赋值函数)
ADD_SUBDIRECTORY(src/rem_to_mod)
ADD_SUBDIRECTORY(src/greatest_common_divisor)
ADD_SUBDIRECTORY(src/openFileMode)
#INSTALL(FILES README DESTINATION share/doc/cmake)

